{{$NEXT}}

2.56     2016-05-06

- Cleaned up some cruft in Pod. Some sections ended up in there twice.


2.55     2016-05-06

- The values of $@, $!, and $? are protected in various cases where they could
  end up being changed by logging code. Patch by Salvador Fandiño. GitHub #18.

- Treat MSYS2 like Cygwin in tests. Fix by Graham Ollis. GitHub #19.


2.54     2016-01-18

- Fixed File::Locked even more. While some deadlocks were eliminated, there
  was still an issue when a Log::Dispatch object was created in a parent
  process and then recreated in the children. If the close_after_write
  parameter was false, then there would be a deadlock.

- Made Syslog work on a threaded Perl when the threads module was not
  explicitly loaded. Fixed by Konrad Bucheli. GitHub #13.

- The log() method now accepts a level parameter as an integer. Fixed by Steve
  Bertrand. GitHub #15.


2.53     2016-01-14

- Actually fix File::Locked, this time with some actual tests.


2.52     2016-01-13

- Make File::Locked output do an explicit unlock if the close_after_write
  option is not set. Without this it would open the file once in each process,
  attempting to get a lock at open time, pretty much guaranteeing a deadlock
  in a multiprocess environment. Now it should work sanely whether
  close_after_write is true or not.


2.51     2015-09-19

- Fixed t/08-screen.t on Windows platforms.


2.50     2015-09-02

- Changed how the Screen output handles UTF-8 data once more. The Screen
  module has gone back to printing output directly to the global STDOUT and
  STDERR handles. The previous changes broke the tests for several modules,
  including Log::Dispatch::Config. This change should fix them.


2.49     2015-08-21

- The Screen output now enables autoflush on the handle it uses to send output
  to STDOUT or STDERR every time it sends a message. This does not affect the
  global STDOUT or STDERR, as the Screen module makes its own handle for